--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,20 +17,18 @@ services:
       - keycloak-network
 
   keycloak:
-    image: quay.io/keycloak/keycloak:26.2.5
+    image: quay.io/keycloak/keycloak:26.3.0
     container_name: keycloak
     environment:
       KC_DB: postgres
       KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: password
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: admin
       KC_HEALTH_ENABLED: true
       KC_METRICS_ENABLED: true
       KC_FEATURES: preview
-    volumes:
-      - ./build/libs/katalon-passwordless-1.0-SNAPSHOT.jar:/opt/keycloak/providers/katalon-passwordless.jar
     ports:
       - "8080:8080"
     depends_on:
